Practise_11_12/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: my-web-app
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-web-app
      tier: backend
  template:
    metadata:
      labels:
        app: my-web-app
        tier: backend
    spec:
      containers:
        - name: backend
          image: kennethreitz/httpbin
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /status/200
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /status/200
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
