Practise_11_12/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: my-web-app
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: my-web-app
    tier: backend
  ports:
    - port: 5000
      targetPort: 80
      protocol: TCP
      name: http
