Practise_11_12/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: my-web-app
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: my-web-app
    tier: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
